welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: type mismatch;
 found   : Unit
 required: Int
		if (die1 == die2) {
                ^